@@ -18,6 +18,7 @@
 	* Avoid a crash on getting the header of a BS message, and this won't be
 	decorated (not needed in bs).
 	* Set bs header as cached after retrieving bodies.
+	* Fix saving "show external images" flag in bodystruct backend.
 
 2009-10-26  Sergio Villar Senin  <svillar@igalia.com>
 
